rework de workflow, integracion de clase ticket y desacoplamiento de \api

--- a/proyecto/docker-compose.yml
+++ b/proyecto/docker-compose.yml
@@ -20,8 +20,9 @@ services:
       - N8N_PROTOCOL=http
       - WEBHOOK_URL=http://localhost:5678/
       - GENERIC_TIMEZONE=America/Lima
+      - DB_SQLITE_PATH=/home/node/.n8n/database.sqlite
     volumes:
-      - ./n8n/data:/home/node/.n8n
+      - n8n_data:/home/node/.n8n
     networks:
       - tickets-network
     healthcheck:
@@ -46,6 +47,7 @@ services:
       - AGENTE_ESTIMADOR_URL=http://agente-estimador:8005
       - AGENTE_COMPLEJIDAD_URL=http://agente-complejidad:8001
       - AGENTE_ORQUESTADOR_URL=http://agente-orquestador:8003
+      - N8N_WEBHOOK_URL=http://n8n:5678/webhook-test/derivar
       - JIRA_API_TOKEN=ATATT3xFfGF094mZSiL3wsQDIAecBwoVhIceEYrv7D4lnqcXWGpeFEqfvOyiOwU9m9JiPzWhgalbeeHxmVZQGHhFqOHG_7tl9sJtDE53tKRZTweBqubABsjNv_QkEfiKfINHKdnw5-hZFFNSziUEKBWeIPp0OISugzEUxdmEAlcT1wryn3ahTFw=848CEDB4
       - JIRA_DOMAIN=jhairrmb3.atlassian.net
       - JIRA_EMAIL=jhairrmb3@gmail.com
@@ -58,6 +60,7 @@ services:
       - ./data:/app/data
       - ./frontend:/app/frontend
     depends_on:
+      - n8n
       - agente-historico
       - agente-estimador
       - agente-complejidad
@@ -158,3 +161,6 @@ services:
 networks:
   tickets-network:
     driver: bridge
+
+volumes:
+  n8n_data:
