Cambios en el flujo del agente historico y estimador. Cambios al front y tipo de atencion SD

--- a/proyecto/docker-compose.yml
+++ b/proyecto/docker-compose.yml
@@ -107,6 +107,7 @@ services:
       - AGENT_PORT=8005
     volumes:
       - ./agents/estimador:/app/agents/estimador
+      - ./models:/app/models
       - ./data:/app/data
     networks:
       - tickets-network
